--- a/app/src/main/res/menu/menu_search.xml
+++ b/app/src/main/res/menu/menu_search.xml
@@ -7,6 +7,6 @@
 
           android:title="Поиск"
           android:icon="@android:drawable/ic_menu_search"
-          app:showAsAction="collapseActionView|ifRoom"
-          app:actionViewClass="android.support.v7.widget.SearchView" />
+          app:showAsAction="ifRoom"
+          app:actionViewClass="android.widget.SearchView" />
 </menu>
