--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -126,7 +126,7 @@
                 <TextView
                     android:id="@+id/user_info_rating_tv"
                     style="@style/header_tv"
-                    android:text="5"
+                    android:text="122(120)"
                     />
 
                 <TextView
